--- a/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
+++ b/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
@@ -20,7 +20,7 @@
         </label>
       </legend>
       <input
-        class="w-full mt-3"
+        class="w-full mt-3 font-bold"
         pInputText
         formControlName="title"
         placeholder="Digite o título da mensagem"
