--- a/src/app/core/pages/reminders/children/show-reminder/show-reminder.component.html
+++ b/src/app/core/pages/reminders/children/show-reminder/show-reminder.component.html
@@ -5,9 +5,9 @@
 
 <gl-back-button />
 
-@if(reminder.result$ | async ; as reminder){ @if (reminder.isLoading) {
-<p>loading...</p>
-} @if(reminder.isSuccess){
+@if (reminder().isLoading) {
+<p>Loading...</p>
+} @if (reminder().data; as reminder) {
 <form class="mt-5 formgrid grid gap-3 px-2">
   <div class="col-12 lg:col px-0 flex flex-column gap-3">
     <fieldset class="field col-12 m-0 p-0">
@@ -18,7 +18,7 @@
       <input
         class="w-full mt-3"
         pInputText
-        [value]="reminder.data.scheduled | date : 'dd/MM/yy HH:mm'"
+        [value]="reminder.scheduled | date : 'dd/MM/yy HH:mm'"
         readonly
       />
     </fieldset>
@@ -28,10 +28,10 @@
         <label class="mb-1"> Título </label>
       </legend>
       <input
-        class="w-full mt-3"
+        class="w-full mt-3 font-bold"
         pInputText
         placeholder="Digite o título da mensagem"
-        [value]="reminder.data.title"
+        [value]="reminder.title"
         readonly
       />
     </fieldset>
@@ -46,7 +46,7 @@
         cols="8"
         class="w-full mt-3"
         pInputTextarea
-        [value]="reminder.data.description"
+        [value]="reminder.description"
         readonly
       ></textarea>
     </fieldset>
@@ -58,7 +58,7 @@
       </legend>
 
       <ul class="px-0 flex flex-column gap-3 hidden">
-        @for (contact of reminder.data.usersToReminder; track $index) {
+        @for (contact of reminder.usersToReminder; track $index) {
         <li
           class="flex justify-content-between align-items-center px-3 py-2 bg-white shadow-1 border-round-xl"
         >
@@ -96,4 +96,6 @@
     ></p-button>
   </div>
 </form>
-} }
+} @if (reminder().isError) {
+<p>Error</p>
+}
