--- a/src/app/core/pages/reminders/children/show-reminder/show-reminder.component.html
+++ b/src/app/core/pages/reminders/children/show-reminder/show-reminder.component.html
@@ -28,7 +28,7 @@
         <label class="mb-1"> Título </label>
       </legend>
       <input
-        class="w-full mt-3 font-bold"
+        class="w-full mt-3"
         pInputText
         placeholder="Digite o título da mensagem"
         [value]="reminder.title"
