--- a/src/app/core/pages/reminders/children/edit-reminder/edit-reminder.component.html
+++ b/src/app/core/pages/reminders/children/edit-reminder/edit-reminder.component.html
@@ -6,7 +6,7 @@
 <gl-back-button />
 
 @if(reminder$ | async ; as reminder){ @if (reminder.isLoading) {
-<p>loading...</p>
+<p>Loading...</p>
 }@if(reminder.isSuccess) {
 <form
   class="mt-5 formgrid grid gap-3 px-2"
@@ -23,7 +23,7 @@
         </label>
       </legend>
       <input
-        class="w-full mt-3 font-bold"
+        class="w-full mt-3"
         pInputText
         formControlName="title"
         placeholder="Digite o título da mensagem"
@@ -84,10 +84,16 @@
         >
           <span class="overflow-hidden">
             <div
-              class="inline-flex align-items-center gap-2 bg-blue-50 mx-1 p-2 border-1 border-round-md border-blue-100"
+              class="inline-flex align-items-center gap-2 bg-blue-50 mx-1 px-2 py-1 border-1 border-round-md border-blue-100"
               *ngFor="let option of value"
             >
-              <span class="text-blue-900 font-medium">{{ option.name }}</span>
+              <span
+                class="text-blue-900 text-sm"
+                [style]="{
+                  backgroundColor: 'var(--light)',
+                }"
+                >{{ option.name }}</span
+              >
               <p-tag
                 severity="success"
                 [style]="{ backgroundColor: 'var(--secondary-color)' }"
