--- a/src/app/core/pages/reminders/reminders.component.html
+++ b/src/app/core/pages/reminders/reminders.component.html
@@ -13,7 +13,7 @@
 </div>
 
 @if(reminders().isLoading){
-<p>loading</p>
+<p>Loading...</p>
 } @else if (reminders().data!.length > 0) {
 
 <p-accordion
@@ -31,7 +31,10 @@
         </div>
 
         <div class="flex align-items-center gap-2">
-          <div class="p-tag">
+          <div
+            class="p-tag text-blue-500"
+            [style]="{ backgroundColor: 'var(--blue-100)' }"
+          >
             <span> {{ reminder.scheduled | date : 'dd/MM/yy - HH:mm' }} </span>
           </div>
           <p-tag
@@ -44,30 +47,50 @@
     </ng-template>
 
     <ng-template pTemplate="p-accordion-content">
-      <p>{{ reminder.description }}</p>
+      <div>
+        <p>{{ reminder.description }}</p>
+      </div>
 
-      <div class="flex justify-content-end gap-2">
-        <p-button
-          [text]="true"
-          icon="pi pi-pencil"
-          [rounded]="true"
-          (onClick)="onEdit(reminder.id)"
-        ></p-button>
+      <div class="flex justify-content-between align-items-center gap-2">
+        <div class="overflow-hidden flex flex-nowrap">
+          <div
+            class="inline-flex align-items-center gap-2 m-1 bg-blue-50 mr-2 px-2 py-1 border-1 border-round-md border-blue-100"
+            *ngFor="let contact of reminder.usersToReminder"
+          >
+            <span class="text-blue-900 font-medium text-sm">{{
+              contact.name
+            }}</span>
+            <p-tag
+              severity="success"
+              [style]="{ backgroundColor: 'var(--secondary-color)' }"
+              value="Email"
+            />
+          </div>
+        </div>
 
-        <p-button
-          [text]="true"
-          icon="pi pi-trash"
-          [rounded]="true"
-          severity="danger"
-          (onClick)="onDelete(reminder.id)"
-        ></p-button>
+        <div class="flex align-items-center gap-2">
+          <p-button
+            [text]="true"
+            icon="pi pi-pencil"
+            [rounded]="true"
+            (onClick)="onEdit(reminder.id)"
+          ></p-button>
 
-        <p-button
-          [text]="true"
-          icon="pi pi-chevron-right"
-          [rounded]="true"
-          (onClick)="onShow(reminder.id)"
-        ></p-button>
+          <p-button
+            [text]="true"
+            icon="pi pi-trash"
+            [rounded]="true"
+            severity="danger"
+            (onClick)="onDelete(reminder.id)"
+          ></p-button>
+
+          <p-button
+            [text]="true"
+            icon="pi pi-chevron-right"
+            [rounded]="true"
+            (onClick)="onShow(reminder.id)"
+          ></p-button>
+        </div>
       </div>
     </ng-template>
   </p-accordionTab>
