--- a/src/app/core/pages/reminders/reminders.component.html
+++ b/src/app/core/pages/reminders/reminders.component.html
@@ -14,7 +14,7 @@
 
 @if(reminders().isLoading){
 <p>Loading...</p>
-} @else if (reminders().data!.length > 0) {
+} @if (reminders().data; as reminder) {
 
 <p-accordion
   expandIcon="pi pi-chevron-down"
@@ -53,12 +53,12 @@
 
       <div class="flex justify-content-between align-items-center gap-2">
         <div class="overflow-hidden flex flex-nowrap">
+          @for (reminder of reminder.usersToReminder; track $index) {
           <div
             class="inline-flex align-items-center gap-2 m-1 bg-blue-50 mr-2 px-2 py-1 border-1 border-round-md border-blue-100"
-            *ngFor="let contact of reminder.usersToReminder"
           >
             <span class="text-blue-900 font-medium text-sm">{{
-              contact.name
+              reminder.contact.name
             }}</span>
             <p-tag
               severity="success"
@@ -66,6 +66,7 @@
               value="Email"
             />
           </div>
+          }
         </div>
 
         <div class="flex align-items-center gap-2">
