--- a/src/app/core/pages/reminders/reminders.component.html
+++ b/src/app/core/pages/reminders/reminders.component.html
@@ -57,9 +57,9 @@
           <div
             class="inline-flex align-items-center gap-2 m-1 bg-blue-50 mr-2 px-2 py-1 border-1 border-round-md border-blue-100"
           >
-            <span class="text-blue-900 font-medium text-sm">{{
-              reminder.contact.name
-            }}</span>
+            <span class="text-blue-900 font-medium text-sm">
+              {{ reminder.contact.name }}
+            </span>
             <p-tag
               severity="success"
               [style]="{ backgroundColor: 'var(--secondary-color)' }"
