feat: clear form when closing the edit password modal

--- a/src/app/core/pages/user-account/profile/profile.component.html
+++ b/src/app/core/pages/user-account/profile/profile.component.html
@@ -4,6 +4,7 @@
   [draggable]="false"
   [resizable]="false"
   [closeOnEscape]="false"
+  (onHide)="resetForm()"
 >
   <ng-template pTemplate="header">
     <gl-title
