fix: add remaining validations name, email

--- a/src/app/core/pages/contacts/contacts.component.html
+++ b/src/app/core/pages/contacts/contacts.component.html
@@ -41,6 +41,8 @@
             pInputText
             formControlName="name"
             id="name"
+            [maxlength]="100"
+            [minlength]="3"
           />
         </span>
       </fieldset>
@@ -61,6 +63,8 @@
             class="w-full"
             pInputText
             formControlName="identify"
+            [maxlength]="100"
+            [minlength]="4"
           />
         </span>
       </fieldset>
