refactor: refactor new reminder page

--- a/src/app/core/components/back-button/back-button.component.html
+++ b/src/app/core/components/back-button/back-button.component.html
@@ -1,11 +1,14 @@
-<div class="card flex justify-content-start mt-3">
+<div
+  class="card flex justify-content-start my-3"
+  style="max-width: 900px; margin: auto"
+>
   <p-button
     icon="pi pi-arrow-left"
     [rounded]="true"
     severity="info"
     [outlined]="true"
-    size="small"
     (click)="location.back()"
     pTooltip="Voltar"
+    styleClass="w-2rem h-2rem"
   ></p-button>
 </div>
