--- a/src/app/core/components/title/title.component.html
+++ b/src/app/core/components/title/title.component.html
@@ -1,4 +1,7 @@
-<div class="flex gap-4 align-items-center justify-content-between w-full">
+<div
+  class="title flex gap-4 align-items-center justify-content-between w-full w-auto"
+  style="max-width: 900px; margin: auto"
+>
   <h2
     class="text-3xl font-normal my-0"
     [style]="{ color: 'var(--dark-color)' }"
