--- a/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.scss
+++ b/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.scss
@@ -3,4 +3,16 @@
     max-width: 900px;
     margin: 0 auto;
   }
+
+  @media (max-width: 425px) {
+    .container {
+      padding: 1rem;
+    }
+  }
+
+  @media (max-width: 1280px) {
+    .container {
+      padding: 0.5rem;
+    }
+  }
 }
