--- a/src/app/core/pages/contacts/add-contact/add-contact.component.scss
+++ b/src/app/core/pages/contacts/add-contact/add-contact.component.scss
@@ -4,3 +4,20 @@
     margin: 0 auto;
   }
 }
+
+fieldset label {
+  color: #003459;
+}
+
+@media (max-width: 425px) {
+  main {
+    padding-inline: 1rem;
+  }
+  form {
+    gap: 2rem !important;
+    padding: 0 0.5rem !important;
+  }
+  header {
+    padding: 0 0.5rem !important;
+  }
+}
