--- a/src/app/core/components/back-button/back-button.component.html
+++ b/src/app/core/components/back-button/back-button.component.html
@@ -1,7 +1,4 @@
-<div
-  class="card flex justify-content-start my-3"
-  style="max-width: 900px; margin: auto"
->
+<div class="card flex justify-content-start my-3">
   <p-button
     icon="pi pi-arrow-left"
     [rounded]="true"
