--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import 'primeicons/primeicons.css';
 
 @import './app/styles/primeng.scss';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 :root {
   --primary-color: #00a6cb;
@@ -18,6 +19,7 @@
 html,
 body {
   height: 100%;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
