feat: logout user when refeshToken expired

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -63,8 +63,8 @@
 
   <ng-template pTemplate="footer">
     <p-button
-      label="Configurações"
-      icon=" pi pi-cog"
+      label="Meu perfil"
+      icon=" pi pi-user"
       [outlined]="true"
       routerLink="profile"
       (click)="onClickMenuOption()"
