--- a/src/app/core/pages/reminders/reminders.component.html
+++ b/src/app/core/pages/reminders/reminders.component.html
@@ -14,13 +14,13 @@
 
 @if(reminders().isLoading){
 <p>Loading...</p>
-} @if (reminders().data; as reminder) {
+} @if (reminders().data; as reminders) {
 
 <p-accordion
   expandIcon="pi pi-chevron-down"
   collapseIcon="pi pi-chevron-up"
 >
-  @for (reminder of reminders().data; track $index) {
+  @for (reminder of reminders; track $index) {
   <p-accordionTab>
     <ng-template pTemplate="header">
       <div
@@ -95,6 +95,8 @@
       </div>
     </ng-template>
   </p-accordionTab>
+  } @empty {
+  <p class="text-center block mt-4">Nenhum lembrete por enquanto</p>
   }
 </p-accordion>
 }
