style: back-button component

--- a/src/app/core/components/back-button/back-button.component.html
+++ b/src/app/core/components/back-button/back-button.component.html
@@ -1,11 +1,12 @@
 <div class="card flex justify-content-start my-3">
-  <p-button
-    icon="pi pi-arrow-left"
+  <button
+    pButton
+    icon="pi pi-chevron-left"
     [rounded]="true"
     severity="info"
     [outlined]="true"
     (click)="location.back()"
     pTooltip="Voltar"
-    styleClass="w-2rem h-2rem"
-  ></p-button>
+    class="shadow-1"
+  ></button>
 </div>
