--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -18,7 +18,7 @@
   <ng-template pTemplate="header">
     <img
       src="/assets/logo.svg"
-      alt="GoLembrar logo"
+      alt="goLembrar logo"
       width="180"
       routerLink=""
       (click)="onClickMenuOption()"
