feat: add checkbox on filter contatct menu

--- a/src/app/core/components/layout/layout.component.scss
+++ b/src/app/core/components/layout/layout.component.scss
@@ -10,6 +10,10 @@
     max-width: 1200px;
     margin: auto;
   }
+
+  p-sidebar {
+    font-family: 'Poppins';
+  }
 }
 @media (min-width: 768px) {
   :host {
