--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -6,7 +6,7 @@
   rejectButtonStyleClass="p-button-small p-button-text p-button-danger mr-3"
   acceptButtonStyleClass="p-button-small"
   [style]="{ width: '80%' }"
-></p-confirmDialog>
+/>
 
 <p-sidebar
   [(visible)]="isSidebarOpen"
@@ -25,19 +25,26 @@
     />
 
     <p-button
-      label="Novo lembrete"
       [outlined]="true"
       routerLink="new"
       (click)="onClickMenuOption()"
       styleClass="flex justify-content-center align-items-center gap-2"
     >
       <ng-template pTemplate="icon">
-        <img
-          class="p-0"
-          width="16"
-          src="/assets/Gplus-icon.svg"
-          alt="Description of SVG"
-        />
+        <span class="flex justify-content-start align-items-center gap-2">
+          <img
+            class="p-0"
+            width="16"
+            src="/assets/Gplus-icon.svg"
+          />
+          <span
+            class="p-button-label min-w-full"
+            data-pc-section="label"
+          >
+            <span [style]="{ color: 'var(--primary-color)' }"> Novo </span>
+            lembrete
+          </span>
+        </span>
       </ng-template>
     </p-button>
   </ng-template>
